--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
    <title>Freelance</title>
 </head>
 <body>
+   <div class="container">
 <div class="header">
    <div class="privet">Привет, друг!</div>
    <div class="photo_1"><img src="/img/shape_9_345.png" alt=""></div>
@@ -26,6 +27,7 @@
    <div class="flex">Основным преимуществом гибкой FLEX разметки является возможность изменять</div>
    <div class="flex">ширину/высоту пространство вокруг и порядок flex-элементов, для того чтобы </div>
    <div class="flex">наилучшим образом заполнить доступное пространство flex-контейнера.</div>
+</div>
 </div>
 </body>
 </html>
