--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <div class="container">
 <div class="header">
    <div class="privet">Привет, друг!</div>
-   <div class="photo_1"><img src="shape_9_345.png" alt=""></div>
+   <div class="photo_1"><img src="../img/shape_9_345.png" alt=""></div>
    <ul class="text_1">
       <li>У тебя все получится!</li>
       <li>Никогда не сдавайся!</li>
@@ -20,7 +20,7 @@
    </ul>
 </div>
 <div class="body">
-   <div class="photo_2"><img src="video_14.png" alt=""></div>
+   <div class="photo_2"><img src="../img/video_14.png" alt=""></div>
    <div class="chto">Что такое FlexBox?</div>
    <div class="flex">Flexbox - это целый модуль, содержащий в себе набор свойств и их значений как </div>
    <div class="flex">для родителя flex-контейнера так и для его дочерних элементов flex-элементов.</div> <br><br>
@@ -29,5 +29,6 @@
    <div class="flex">наилучшим образом заполнить доступное пространство flex-контейнера.</div>
 </div>
 </div>
+<div class="uu"></div>
 </body>
 </html>
